--- a/references.bib
+++ b/references.bib
@@ -1281,3 +1281,412 @@ abstract = {The efficient parallelization of fast multipole-based algorithms for
   year      = {2014},
   publisher = {IOP Publishing}
 }
+
+@misc{qt_wiki,
+  author       = {{Wikipedia contributors}},
+  title        = {Qt (software)},
+  year         = {2025},
+  url          = {https://en.wikipedia.org/wiki/Qt_(software)},
+  note         = {Wikipedia article, last edited May 1, 2025}
+}
+
+@misc{qt_docs,
+  author       = {{The Qt Company}},
+  title        = {Signals \& Slots},
+  year         = {2025},
+  url          = {https://doc.qt.io/qt-6/signalsandslots.html},
+  note         = {Official Qt 6 Documentation (Signals and Slots reference)}
+}
+
+@misc{lemberg,
+  author       = {Ivan Kubara},
+  title        = {What is Qt framework, Why to Use It, and How?},
+  year         = {2023},
+  publisher    = {Lemberg Solutions},
+  url          = {https://lembergsolutions.com/blog/why-use-qt-framework},
+  note         = {Lemberg Solutions blog post (Embedded Engineering)}
+}
+
+@misc{qt_history,
+  author       = {{Qt Wiki contributors}},
+  title        = {Qt History},
+  year         = {2024},
+  url          = {https://wiki.qt.io/Qt_History},
+  note         = {Qt Wiki page (last edited August 14, 2024)}
+}
+
+@misc{qt_framework,
+  author       = {{The Qt Company}},
+  title        = {Qt Framework: Development Framework for Cross-platform Applications},
+  year         = {2025},
+  url          = {https://www.qt.io/product/framework},
+  note         = {Official Qt product page}
+}
+
+@misc{qt_mit_signals,
+  author       = {{Trolltech (archived)}},
+  title        = {Signals and Slots},
+  year         = {2003},
+  url          = {https://web.mit.edu/~firebird/arch/sun4x_58/doc/html/signalsandslots.html},
+  note         = {Archived Qt 3.1.2 documentation (Trolltech, 2003)}
+}
+
+@misc{qt_widgets,
+  author       = {{The Qt Company}},
+  title        = {Qt Widgets Module},
+  year         = {2025},
+  url          = {https://doc.qt.io/qt-6/qtwidgets-index.html},
+  note         = {Qt 6.9 Documentation (Qt Widgets overview)}
+}
+
+@misc{qt_quick,
+  author       = {{The Qt Company}},
+  title        = {Qt Quick Module},
+  year         = {2025},
+  url          = {https://doc.qt.io/qt-6/qtquick-index.html},
+  note         = {Qt 6.9 Documentation (Qt Quick overview)}
+}
+
+@misc{qt_licensing,
+  author       = {{The Qt Company}},
+  title        = {Qt Licensing: Choose the Right License for Your Development Needs},
+  year         = {2025},
+  url          = {https://www.qt.io/qt-licensing},
+  note         = {Qt official licensing information page}
+}
+
+@misc{qt_tools,
+  author       = {{The Qt Company}},
+  title        = {Qt Creator: Embedded Software Development Tools \& Cross-Platform IDE},
+  year         = {2025},
+  url          = {https://www.qt.io/product/development-tools},
+  note         = {Qt official page for development tools (Qt Creator IDE)}
+}
+
+@misc{qt_use_cases,
+  author       = {{The Qt Company}},
+  title        = {Qt Use Cases},
+  year         = {2025},
+  url          = {https://www.qt.io/use-cases},
+  note         = {Official Qt page on industry use cases}
+}
+
+@misc{ontosight_pyqt_basics,
+  author       = {{Ontosight AI}},
+  title        = {Introduction to PyQt Basics},
+  year         = {2024},
+  url          = {https://ontosight.ai/glossary/term/introduction-to-pyqt-basics},
+  note         = {OntoSight AI glossary entry}
+}
+
+@article{itsupplychain,
+  author       = {Ellie Yantsan},
+  title        = {What is Qt -- Key Features of Qt Development},
+  year         = {2024},
+  journal      = {IT Supply Chain (Industry Talk)},
+  url          = {https://itsupplychain.com/what-is-qt-key-features-of-qt-development/},
+  note         = {Industry blog post}
+}
+
+@misc{pyqt_wiki,
+  author       = {{Wikipedia contributors}},
+  title        = {PyQt},
+  year         = {2025},
+  url          = {https://en.wikipedia.org/wiki/PyQt},
+  note         = {Wikipedia article, last edited April 18, 2025}
+}
+
+@misc{tutorialspoint_pyqt,
+  author       = {{TutorialsPoint}},
+  title        = {PyQt Tutorial},
+  year         = {2025},
+  url          = {https://www.tutorialspoint.com/pyqt/index.htm},
+  note         = {Online tutorial (TutorialsPoint)}
+}
+
+@misc{qtforpython_api,
+  author       = {{The Qt Company}},
+  title        = {Qt for Python Modules},
+  year         = {2025},
+  url          = {https://doc.qt.io/qtforpython-5/api.html},
+  note         = {Qt for Python 5.15 API documentation}
+}
+
+@misc{qt_for_python_video,
+  author       = {{Qt for Python Project}},
+  title        = {Introduction to PyQt (YouTube video)},
+  year         = {2021},
+  howpublished = {YouTube},
+  note         = {Video tutorial (TutorialsPoint channel)},
+  url          = {https://www.youtube.com/watch?v=dqznRyYunGE}
+}
+
+@misc{qt_for_python,
+  author       = {{The Qt Company}},
+  title        = {Qt for Python: Design GUI with Python (Python Bindings for Qt)},
+  year         = {2025},
+  url          = {https://www.qt.io/qt-for-python},
+  note         = {Official Qt page on Python bindings (PySide6)}
+}
+
+@misc{gfg_pyqt_vs_tkinter,
+  author       = {{GeeksforGeeks}},
+  title        = {Python GUI -- PyQt vs. Tkinter},
+  year         = {2020},
+  url          = {https://www.geeksforgeeks.org/python-gui-pyqt-vs-tkinter/},
+  note         = {GeeksforGeeks tutorial (last updated Dec 11, 2020)}
+}
+
+@misc{businesscloud,
+  author       = {{BusinessCloud staff}},
+  title        = {Introduction to Qt development: A beginner's guide},
+  year         = {2025},
+  url          = {https://businesscloud.co.uk/news/introduction-to-qt-development-a-beginners-guide/},
+  note         = {BusinessCloud news article, posted April 24, 2025}
+}
+
+@misc{qt_wiki,
+  author       = {{Wikipedia contributors}},
+  title        = {Qt (software)},
+  year         = {2025},
+  url          = {https://en.wikipedia.org/wiki/Qt_(software)},
+  note         = {Wikipedia article, last edited May 1, 2025}
+}
+
+@misc{qt_docs,
+  author       = {{The Qt Company}},
+  title        = {Signals \& Slots},
+  year         = {2025},
+  url          = {https://doc.qt.io/qt-6/signalsandslots.html},
+  note         = {Official Qt 6 Documentation (Signals and Slots reference)}
+}
+
+@misc{lemberg,
+  author       = {Ivan Kubara},
+  title        = {What is Qt framework, Why to Use It, and How?},
+  year         = {2023},
+  publisher    = {Lemberg Solutions},
+  url          = {https://lembergsolutions.com/blog/why-use-qt-framework},
+  note         = {Lemberg Solutions blog post (Embedded Engineering)}
+}
+
+@misc{qt_history,
+  author       = {{Qt Wiki contributors}},
+  title        = {Qt History},
+  year         = {2024},
+  url          = {https://wiki.qt.io/Qt_History},
+  note         = {Qt Wiki page (last edited August 14, 2024)}
+}
+
+@misc{qt_framework,
+  author       = {{The Qt Company}},
+  title        = {Qt Framework: Development Framework for Cross-platform Applications},
+  year         = {2025},
+  url          = {https://www.qt.io/product/framework},
+  note         = {Official Qt product page}
+}
+
+@misc{qt_mit_signals,
+  author       = {{Trolltech (archived)}},
+  title        = {Signals and Slots},
+  year         = {2003},
+  url          = {https://web.mit.edu/~firebird/arch/sun4x_58/doc/html/signalsandslots.html},
+  note         = {Archived Qt 3.1.2 documentation (Trolltech, 2003)}
+}
+
+@misc{qt_widgets,
+  author       = {{The Qt Company}},
+  title        = {Qt Widgets Module},
+  year         = {2025},
+  url          = {https://doc.qt.io/qt-6/qtwidgets-index.html},
+  note         = {Qt 6.9 Documentation (Qt Widgets overview)}
+}
+
+@misc{qt_quick,
+  author       = {{The Qt Company}},
+  title        = {Qt Quick Module},
+  year         = {2025},
+  url          = {https://doc.qt.io/qt-6/qtquick-index.html},
+  note         = {Qt 6.9 Documentation (Qt Quick overview)}
+}
+
+@misc{qt_licensing,
+  author       = {{The Qt Company}},
+  title        = {Qt Licensing: Choose the Right License for Your Development Needs},
+  year         = {2025},
+  url          = {https://www.qt.io/qt-licensing},
+  note         = {Qt official licensing information page}
+}
+
+@misc{qt_tools,
+  author       = {{The Qt Company}},
+  title        = {Qt Creator: Embedded Software Development Tools \& Cross-Platform IDE},
+  year         = {2025},
+  url          = {https://www.qt.io/product/development-tools},
+  note         = {Qt official page for development tools (Qt Creator IDE)}
+}
+
+@misc{qt_use_cases,
+  author       = {{The Qt Company}},
+  title        = {Qt Use Cases},
+  year         = {2025},
+  url          = {https://www.qt.io/use-cases},
+  note         = {Official Qt page on industry use cases}
+}
+
+@misc{ontosight_pyqt_basics,
+  author       = {{Ontosight AI}},
+  title        = {Introduction to PyQt Basics},
+  year         = {2024},
+  url          = {https://ontosight.ai/glossary/term/introduction-to-pyqt-basics},
+  note         = {OntoSight AI glossary entry}
+}
+
+@article{itsupplychain,
+  author       = {Ellie Yantsan},
+  title        = {What is Qt -- Key Features of Qt Development},
+  year         = {2024},
+  journal      = {IT Supply Chain (Industry Talk)},
+  url          = {https://itsupplychain.com/what-is-qt-key-features-of-qt-development/},
+  note         = {Industry blog post}
+}
+
+@misc{pyqt_wiki,
+  author       = {{Wikipedia contributors}},
+  title        = {PyQt},
+  year         = {2025},
+  url          = {https://en.wikipedia.org/wiki/PyQt},
+  note         = {Wikipedia article, last edited April 18, 2025}
+}
+
+@misc{tutorialspoint_pyqt,
+  author       = {{TutorialsPoint}},
+  title        = {PyQt Tutorial},
+  year         = {2025},
+  url          = {https://www.tutorialspoint.com/pyqt/index.htm},
+  note         = {Online tutorial (TutorialsPoint)}
+}
+
+@misc{qtforpython_api,
+  author       = {{The Qt Company}},
+  title        = {Qt for Python Modules},
+  year         = {2025},
+  url          = {https://doc.qt.io/qtforpython-5/api.html},
+  note         = {Qt for Python 5.15 API documentation}
+}
+
+@misc{qt_for_python_video,
+  author       = {{Qt for Python Project}},
+  title        = {Introduction to PyQt (YouTube video)},
+  year         = {2021},
+  howpublished = {YouTube},
+  note         = {Video tutorial (TutorialsPoint channel)},
+  url          = {https://www.youtube.com/watch?v=dqznRyYunGE}
+}
+
+@misc{qt_for_python,
+  author       = {{The Qt Company}},
+  title        = {Qt for Python: Design GUI with Python (Python Bindings for Qt)},
+  year         = {2025},
+  url          = {https://www.qt.io/qt-for-python},
+  note         = {Official Qt page on Python bindings (PySide6)}
+}
+
+@misc{gfg_pyqt_vs_tkinter,
+  author       = {{GeeksforGeeks}},
+  title        = {Python GUI -- PyQt vs. Tkinter},
+  year         = {2020},
+  url          = {https://www.geeksforgeeks.org/python-gui-pyqt-vs-tkinter/},
+  note         = {GeeksforGeeks tutorial (last updated Dec 11, 2020)}
+}
+
+@misc{businesscloud,
+  author       = {{BusinessCloud staff}},
+  title        = {Introduction to Qt development: A beginner's guide},
+  year         = {2025},
+  url          = {https://businesscloud.co.uk/news/introduction-to-qt-development-a-beginners-guide/},
+  note         = {BusinessCloud news article, posted April 24, 2025}
+}
+
+@book{goldberg1989,
+  author = {Goldberg, David E.},
+  title = {Genetic Algorithms in Search, Optimization and Machine Learning},
+  year = {1989},
+  isbn = {0201157675},
+  publisher = {Addison-Wesley Longman Publishing Co., Inc.},
+  address = {USA},
+  edition = {1st},
+  abstract = {From the Publisher:This book brings together - in an informal and tutorial fashion - the computer techniques, mathematical tools, and research results that will enable both students and practitioners to apply genetic algorithms to problems in many fields. Major concepts are illustrated with running examples, and major algorithms are illustrated by Pascal computer programs. No prior knowledge of GAs or genetics is assumed, and only a minimum of computer programming and mathematics background is required.}
+}
+
+@book{eiben2015,
+  author       = {Arne E. Eiben and James E. Smith},
+  title        = {Introduction to Evolutionary Computing},
+  edition      = {2},
+  series       = {Natural Computing Series},
+  publisher    = {Springer},
+  year         = {2015},
+  address      = {Berlin, Heidelberg},
+  isbn         = {978-3-662-44873-1},
+  isbn2        = {978-3-662-49985-6},
+  eisbn        = {978-3-662-44874-8},
+  doi          = {10.1007/978-3-662-44874-8},
+  url          = {https://doi.org/10.1007/978-3-662-44874-8},
+  pages        = {XII + 287},
+  numpages     = {287},
+  language     = {English},
+  seriesissn   = {1619-7127},
+  serieseissn  = {2627-6461},
+  keywords     = {Evolutionary algorithms, Artificial Intelligence, Computational Intelligence, Optimization, Robotics, Theory of Computation},
+  note         = {Second edition. Includes 55 b/w and 12 colour illustrations. Part of the Springer Computer Science package. © Springer-Verlag GmbH Germany, part of Springer Nature 2015.},
+}
+
+@Inbook{Deb2005,
+author="Deb, Kalyanmoy",
+editor="Burke, Edmund K.
+and Kendall, Graham",
+title="Multi-Objective Optimization",
+bookTitle="Search Methodologies: Introductory Tutorials in Optimization and Decision Support Techniques",
+year="2005",
+publisher="Springer US",
+address="Boston, MA",
+pages="273--316",
+abstract="Many real-world search and optimization problems are naturally posed as non-linear programming problems having multiple objectives. Due to the lack of suitable solution techniques, such problems were artificially converted into a single-objective problem and solved. The difficulty arose because such problems give rise to a set of trade-off optimal solutions (known as Pareto-optimal solutions), instead of a single optimum solution. It then becomes important to find not just one Pareto-optimal solution, but as many of them as possible. This is because any two such solutions constitutes a trade-off among the objectives and users would be in a better position to make a choice when many such trade-off solutions are unveiled.",
+isbn="978-0-387-28356-2",
+doi="10.1007/0-387-28356-0_10",
+url="https://doi.org/10.1007/0-387-28356-0_10"
+}
+
+@article{blank2020,
+  author  = {Julian Blank and Kalyanmoy Deb},
+  title   = {pymoo: Multi-Objective Optimization in Python},
+  journal = {IEEE Access},
+  year    = {2020},
+  volume  = {8},
+  pages   = {89497--89509},
+  doi     = {10.1109/ACCESS.2020.2990567},
+  note    = {Introduces \texttt{pymoo}, a Python framework for multi-objective optimization.}
+}
+
+@article{deb1995,
+  author  = {Kalyanmoy Deb and Ram Bhushan Agrawal},
+  title   = {Simulated Binary Crossover for Continuous Search Space},
+  journal = {Complex Systems},
+  year    = {1995},
+  volume  = {9},
+  number  = {2},
+  pages   = {115--148},
+  note    = {Introduces the SBX crossover operator for real-coded genetic algorithms.}
+}
+
+@article{deb1996,
+  author  = {Kalyanmoy Deb and Mohit Goyal},
+  title   = {A combined genetic adaptive search (GeneAS) for engineering design},
+  journal = {Computer Science and Informatics},
+  year    = {1996},
+  volume  = {26},
+  number  = {4},
+  pages   = {30--45},
+  note    = {Proposes the GeneAS algorithm combining binary and real-coded genetic algorithms.},
+  url={https://api.semanticscholar.org/CorpusID:18387364}
+}
