--- a/references.bib
+++ b/references.bib
@@ -1690,3 +1690,408 @@ url="https://doi.org/10.1007/0-387-28356-0_10"
   note    = {Proposes the GeneAS algorithm combining binary and real-coded genetic algorithms.},
   url={https://api.semanticscholar.org/CorpusID:18387364}
 }
+
+@book{VanderPlas2016,
+  author       = {Jake VanderPlas},
+  title        = {Python Data Science Handbook: Essential Tools for Working with Data},
+  publisher    = {O'Reilly Media, Inc.},
+  year         = {2016},
+  address      = {Sebastopol, CA},
+  isbn         = {9781491912058},
+  url          = {https://www.oreilly.com/library/view/python-data-science/9781491912126/ch04.html},
+  urldate      = {2025-05-12},
+  note         = {Accessed via the O'Reilly learning platform. Released November 2016.}
+}
+
+@article{Hunter2007,
+  author={Hunter, John D.},
+  journal={Computing in Science `I\&' Engineering},
+  title={Matplotlib: A 2D Graphics Environment},
+  year={2007},
+  volume={9},
+  number={3},
+  pages={90-95},
+  keywords={Graphics;Interpolation;Equations;Graphical user interfaces;Packaging;Image generation;User interfaces;Operating systems;Computer languages;Programming profession;Python;scripting languages;application development;scientific programming},
+  doi={10.1109/MCSE.2007.55}
+}
+
+@online{MatplotlibDevTeamMain,
+  author    = {{Matplotlib Development Team}},
+  title     = {Matplotlib – Visualization with Python},
+  year      = {2025},
+  url       = {https://matplotlib.org/},
+  urldate   = {2025-05-12}
+}
+
+@online{ActiveStateMatplotlib,
+  author    = {{ActiveState}},
+  title     = {What Is Matplotlib In Python? How to use it for plotting?},
+  year      = {2025},
+  url       = {https://www.activestate.com/resources/quick-reads/what-is-matplotlib-in-python-how-to-use-it-for-plotting/},
+  urldate   = {2025-05-12}
+}
+
+@online{GeeksforGeeksSciComp,
+  author    = {{GeeksforGeeks}},
+  title     = {Scientific Computing with Python},
+  year      = {2025},
+  url       = {https://www.geeksforgeeks.org/scientific-computing-with-python/},
+  urldate   = {2025-05-12}
+}
+
+@online{MatplotlibDevTeamHistory,
+  author    = {{Matplotlib Development Team}},
+  title     = {History – Matplotlib 3.10.3 documentation},
+  year      = {2025},
+  url       = {https://matplotlib.org/stable/project/history.html},
+  urldate   = {2025-05-12}
+}
+
+@incollection{Jones2012Matplotlib,
+  author       = {Eric Jones and Travis Oliphant and Pearu Peterson and others},
+  title        = {matplotlib},
+  booktitle    = {The Architecture of Open Source Applications, Volume II},
+  editor       = {Amy Brown and Greg Wilson},
+  publisher    = {Lulu.com},
+  year         = {2012},
+  pages        = {390},
+  address      = {Raleigh, NC},
+  isbn         = {9781105571817},
+  url          = {https://aosabook.org/en/v2/matplotlib.html},
+  urldate      = {2025-05-12},
+  note         = {Accessed via AOSA website. Published March 30, 2012.}
+}
+
+
+@online{desosa2021,
+  author    = {{desosa 2021}},
+  title     = {matplotlib - From Vision to Architecture},
+  year      = {2021},
+  url       = {https://2021.desosa.nl/projects/matplotlib/posts/essay2-vision-to-architecture/},
+  urldate   = {2025-05-12}
+}
+
+@online{MatplotlibDevTeamArchitectureYT,
+  author    = {{Matplotlib Development Team}},
+  title     = {Matplotlib Architecture - YouTube},
+  year      = {2025},
+  url       = {https://www.youtube.com/watch?v=lpyj7x7SI8Y},
+  urldate   = {2025-05-12}
+}
+
+@online{delftswaMatplotlib,
+  author    = {{delftswa}},
+  title     = {Matplotlib - The Python 2D Plotting Library},
+  year      = {2017},
+  url       = {https://delftswa.gitbooks.io/desosa-2017/content/matplotlib/chapter.html},
+  urldate   = {2025-05-12}
+}
+
+@online{MatplotlibDevTeamPyplotTut,
+  author    = {{Matplotlib Development Team}},
+  title     = {Pyplot tutorial – Matplotlib 3.10.3 documentation},
+  year      = {2025},
+  url       = {https://matplotlib.org/stable/tutorials/pyplot.html},
+  urldate   = {2025-05-12}
+}
+
+@online{RedditBioinfoMatplotlibSucks,
+  author    = {{Reddit user discussion}},
+  title     = {Matplotlib sucks : r/bioinformatics},
+  note      = {Reflects user perception, not necessarily an academic source, but indicates common beginner issues},
+  year      = {2022},
+  url       = {https://www.reddit.com/r/bioinformatics/comments/t13510/matplotlib_sucks/},
+  urldate   = {2025-05-12}
+}
+
+@online{GeeksforGeeksIntroMPL,
+  author    = {{GeeksforGeeks}},
+  title     = {Introduction to Matplotlib},
+  year      = {2025},
+  url       = {https://www.geeksforgeeks.org/python-introduction-matplotlib/},
+  urldate   = {2025-05-12}
+}
+
+@article{Vu2023,
+  author    = {Trung Vu and others},
+  title     = {Mastering data visualization with Python: practical tips for researchers},
+  journal   = {PeerJ Comput Sci},
+  volume    = {9},
+  pages     = {e1203},
+  month     = {Jan},
+  year      = {2023},
+  doi       = {10.7717/peerj-cs.1203},
+  url       = {https://pmc.ncbi.nlm.nih.gov/articles/PMC10728683/},
+  urldate   = {2025-05-12}
+}
+
+@online{Zhauniarovich2022,
+  author    = {Yury Zhauniarovich},
+  title     = {Matplotlib Graphs in Research Papers},
+  year      = {2022},
+  url       = {https://zhauniarovich.com/post/2022/2022-09-matplotlib-graphs-in-research-papers/},
+  urldate   = {2025-05-12}
+}
+
+@online{llegodev2023,
+  author    = {{llego.dev}},
+  title     = {Interactive Plots with Matplotlib Animations in Python},
+  year      = {2023},
+  url       = {https://llego.dev/posts/interactive-plots-matplotlib-animations-python/},
+  urldate   = {2025-05-12}
+}
+
+@online{SciPyLecturesEcosystem,
+  author    = {{SciPy Lecture Notes Team}},
+  title     = {1.1. Python scientific computing ecosystem},
+  year      = {2025},
+  url       = {https://scipy-lectures.org/intro/intro.html},
+  urldate   = {2025-05-12}
+}
+
+@article{Waskom2021,
+  author    = {Michael Waskom},
+  title     = {Seaborn: statistical data visualization},
+  journal   = {Journal of Open Source Software},
+  volume    = {6},
+  number    = {60},
+  pages     = {3021},
+  month     = {Apr},
+  year      = {2021},
+  doi       = {10.21105/joss.03021}
+}
+
+@article{EHT2019,
+  author    = {{The Event Horizon Telescope Collaboration} and others},
+  title     = {First M87 Event Horizon Telescope Results. I. The Shadow of the Supermassive Black Hole},
+  journal   = {The Astrophysical Journal Letters},
+  volume    = {875},
+  number    = {1},
+  pages     = {L1},
+  month     = {Apr},
+  year      = {2019},
+  doi       = {10.3847/2041-8213/ab0ec7},
+  note      = {Matplotlib was used in the analysis pipeline, though not explicitly cited in this specific paper usually, it's a known tool used by the collaboration}
+}
+
+@book{Landau2015,
+  author    = {Rubin H. Landau and Manuel J. Páez and Cristian C. Bordeianu},
+  title     = {Computational Physics: Problem Solving with Python},
+  edition   = {3rd},
+  publisher = {Wiley-VCH},
+  year      = {2015},
+  note      = {Representative textbook using Python/Matplotlib for physics examples}
+}
+
+@online{RealPythonAstro,
+  author    = {{Real Python}},
+  title     = {Exploring Astrophysics in Python With pandas and Matplotlib},
+  year      = {2025},
+  url       = {https://realpython.com/courses/astrophysics-pandas-matplotlib/},
+  urldate   = {2025-05-12}
+}
+
+@online{GitHubARPMayNBody,
+  author    = {{arpmay}},
+  title     = {N-body-Problem},
+  year      = {2025},
+  url       = {https://github.com/arpmay/N-body-Problem},
+  urldate   = {2025-05-12},
+  note      = {Example of application}
+}
+
+@online{GarrettSciencePlots,
+  author    = {John Garrett and others},
+  title     = {garrettj403/SciencePlots: Matplotlib styles for scientific plotting},
+  year      = {2025},
+  url       = {https://github.com/garrettj403/SciencePlots},
+  urldate   = {2025-05-12}
+}
+
+@online{MatplotlibDevTeamQuickStart,
+  author    = {{Matplotlib Development Team}},
+  title     = {Quick start guide – Matplotlib 3.10.3 documentation},
+  year      = {2025},
+  url       = {https://matplotlib.org/stable/users/explain/quick_start.html},
+  urldate   = {2025-05-12}
+}
+
+@online{RedditPythonMPLBad,
+  author    = {{Reddit user discussion}},
+  title     = {Unpopular opinion: Matplotlib is a bad library : r/Python},
+  year      = {2022},
+  url       = {https://www.reddit.com/r/Python/comments/u8j6fn/unpopular_opinion_matplotlib_is_a_bad_library/},
+  urldate   = {2025-05-12},
+  note      = {Reflects user perception}
+}
+
+@online{StackOverflowGnuplotMPL,
+  author    = {{Stack Overflow discussion}},
+  title     = {gnuplot vs Matplotlib},
+  year      = {2009},
+  url       = {https://stackoverflow.com/questions/911655/gnuplot-vs-matplotlib},
+  urldate   = {2025-05-12},
+  note      = {Community discussion on performance}
+}
+
+@online{GeeksforGeeksDataVis,
+  author    = {{GeeksforGeeks}},
+  title     = {Data Visualization using Matplotlib in Python},
+  year      = {2025},
+  url       = {https://www.geeksforgeeks.org/data-visualization-using-matplotlib/},
+  urldate   = {2025-05-12}
+}
+
+@online{MatplotlibDevTeamCustomizing,
+  author    = {{Matplotlib Development Team}},
+  title     = {Customizing Matplotlib with style sheets and rcParams},
+  year      = {2025},
+  url       = {https://matplotlib.org/stable/users/explain/customizing.html},
+  urldate   = {2025-05-12}
+}
+
+@book{boyd2004convex,
+  author    = {Stephen Boyd and Lieven Vandenberghe},
+  title     = {Convex Optimization},
+  year      = {2004},
+  publisher = {Cambridge University Press},
+  location  = {Cambridge},
+  isbn      = {9780521833783},
+  url       = {https://www.cambridge.org/gb/universitypress/subjects/statistics-probability/optimization-or-and-risk/convex-optimization?format=HB},
+  note      = {Accessed: 2025-05-12}
+}
+
+@article{storn1997differential,
+  author  = {Rainer Storn and Kenneth Price},
+  title   = {Differential Evolution – A Simple and Efficient Heuristic for Global Optimization over Continuous Spaces},
+  journal = {Journal of Global Optimization},
+  year    = {1997},
+  volume  = {11},
+  number  = {4},
+  pages   = {341--359},
+  doi     = {10.1023/A:1008202821328},
+  url     = {https://doi.org/10.1023/A:1008202821328},
+  issn    = {1573-2916},
+  abstract = {A new heuristic approach for minimizing possibly nonlinear and non-differentiable continuous space functions is presented. By means of an extensive testbed it is demonstrated that the new method converges faster and with more certainty than many other acclaimed global optimization methods. The new method requires few control variables, is robust, easy to use, and lends itself very well to parallel computation.}
+}
+
+@book{BoydVandenberghe2004,
+  author    = {Stephen Boyd and Lieven Vandenberghe},
+  title     = {Convex Optimization},
+  publisher = {Cambridge University Press},
+  year      = {2004},
+  address   = {Cambridge, UK},
+  isbn      = {978-0521833783}
+}
+
+@slides{BoydVandenbergheSlides2023,
+  author    = {Stephen Boyd and Lieven Vandenberghe},
+  title     = {Convex Optimization -- Slides},
+  year      = {2023},
+  note      = {Presentation slides accompanying the book "Convex Optimization". Revised by Stephen Boyd, Lieven Vandenberghe, and Parth Nobel. Version date on title page of PDF: 2023.}
+}
+
+@misc{Sidford2020,
+  author    = {Aaron Sidford},
+  title     = {{MS\&E 213 / CS 269O : Bonus Chapter 1 Feasibility Problem and Cutting Plane Methods}},
+  year      = {2020},
+  month     = {November},
+  note      = {Course Notes, Stanford University. Document dated November 17, 2020.}
+}
+
+@book{sinha2006,
+  author    = {S.~M. Sinha},
+  title     = {Mathematical Programming: Theory and Methods},
+  publisher = {Elsevier (A Division of Reed Elsevier India Pvt.\,Ltd.)},
+  year      = {2006},
+  address   = {New Delhi, India},
+  isbn      = {978-81-312-0376-7},
+  isbn      = {81-312-0376-X},
+  pages     = {xv, 572},
+  url       = {https://www.sciencedirect.com/book/9788131203767/mathematical-programming},
+  abstract  = {Una cobertura exhaustiva de la programación matemática desde sus orígenes hasta desarrollos recientes.},
+}
+
+@book{luenberger1984,
+  author    = {David G. Luenberger and Yinyu Ye},
+  title     = {Linear and Nonlinear Programming},
+  edition   = {2nd},
+  publisher = {Addison-Wesley Publishing Company},
+  year      = {1984},
+  address   = {Reading, MA, USA},
+  isbn      = {978-0-201-15794-9},
+  isbn      = {0201157942},
+  pages     = {491},
+  note      = {Reimpresión 2003 por Springer US},
+}
+
+@book{bradley1977applied,
+  author    = {Stephen P. Bradley and Arnoldo C. Hax and Thomas L. Magnanti},
+  title     = {Applied Mathematical Programming},
+  publisher = {Addison-Wesley Publishing Company},
+  year      = {1977},
+  address   = {Reading, MA, USA},
+  isbn      = {978-0-201-00464-9},
+  pages     = {716},
+  url       = {https://books.google.com/books/about/Applied_Mathematical_Programming.html?id=MSWdWv3Gn5cC},
+}
+
+@book{bertsekas1999,
+  author    = {Dimitri P. Bertsekas},
+  title     = {Nonlinear Programming},
+  edition   = {2nd},
+  publisher = {Athena Scientific},
+  year      = {1999},
+  address   = {Belmont, MA, USA},
+  isbn      = {978-1-886529-00-7},
+  isbn      = {1886529000},
+  pages     = {780},
+  url       = {https://vlsicad.eecs.umich.edu/BK/Slots/cache/www.athenasc.com/nonlinbook.html},
+}
+
+@book{nocedal2006,
+  author    = {Jorge Nocedal and Stephen J. Wright},
+  title     = {Numerical Optimization},
+  publisher = {Springer Science+Business Media},
+  year      = {2006},
+  address   = {New York, NY, USA},
+  isbn      = {978-0-387-30303-1},
+  isbn      = {0-387-30303-0},
+  pages     = {xxii, 664},
+  doi       = {10.1007/978-0-387-40065-5},
+  url       = {https://link.springer.com/book/10.1007/978-0-387-40065-5},
+}
+
+@book{boyd2004,
+  author    = {Stephen P. Boyd and Lieven Vandenberghe},
+  title     = {Convex Optimization},
+  publisher = {Cambridge University Press},
+  year      = {2004},
+  address   = {Cambridge, UK},
+  isbn      = {978-0-521-83378-3},
+  isbn      = {0-521-83378-7},
+  pages     = {xxii, 716},
+  url       = {https://web.stanford.edu/~boyd/cvxbook/bv_cvxbook.pdf},
+}
+
+@incollection{bradley1977pe,
+  author    = {Stephen P. Bradley and Arnoldo C. Hax and Thomas L. Magnanti},
+  title     = {Capítulo 9},
+  booktitle = {Applied Mathematical Programming},
+  publisher = {Addison-Wesley Publishing Company},
+  year      = {1977},
+  address   = {Reading, MA, USA},
+  isbn      = {978-0-201-00464-9},
+  isbn      = {020100464X},
+}
+
+@incollection{bradley1977pd,
+  author    = {Stephen P. Bradley and Arnoldo C. Hax and Thomas L. Magnanti},
+  title     = {Capítulo 11},
+  booktitle = {Applied Mathematical Programming},
+  publisher = {Addison-Wesley Publishing Company},
+  year      = {1977},
+  address   = {Reading, MA, USA},
+  isbn      = {978-0-201-00464-9},
+  isbn      = {020100464X},
+}
